Closed
Bug 312891
Opened 20 years ago
Closed 3 years ago
[RTL] Right-click menu doesn't appear in the left of the mouse cursor
Categories
(Firefox :: Menus, defect)
Firefox
Menus
Tracking
()
RESOLVED
FIXED
99 Branch
Tracking | Status | |
---|---|---|
firefox99 | --- | fixed |
People
(Reporter: chahibi, Assigned: emilio)
References
(Blocks 1 open bug)
Details
(Keywords: rtl)
Attachments
(2 files)
User-Agent: Mozilla/5.0 (X11; U; Linux i686; ar; rv:1.8b5) Gecko/20051006 Firefox/1.4.1
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; ar; rv:1.8b5) Gecko/20051006 Firefox/1.4.1
In the arabic version of Mozilla Firefox 1.5 Beta, the right click menu doesn't
appear in the left.
Arabic and Hebrew are written from the right to the left, thus, the right click
menu should appear in the left of the cursor.
Reproducible: Always
Steps to Reproduce:
1. Download the arabic version of Mozilla Firefox from
products/firefox/all-beta.html
2. Open Mozilla Firefox
3. Right click anywhere in Mozilla Firefox
Actual Results:
Menu appears in the right
Expected Results:
Menu should have appeared in the left
Comment 2•16 years ago
|
||
Ehsan, something which is still valid?
Reporter | ||
Comment 3•16 years ago
|
||
This bug is still valid (Firefox 3.5 beta4, Linux version).
Comment 4•16 years ago
|
||
(In reply to comment #2)
> Ehsan, something which is still valid?
Yeah, it is.
Blocks: Persian
Status: NEW → ASSIGNED
Component: Menus → XUL Widgets
OS: Linux → All
Product: Firefox → Toolkit
QA Contact: menus → xul.widgets
Hardware: x86 → All
Version: unspecified → Trunk
Updated•16 years ago
|
Assignee: nobody → ehsan.akhgari
Updated•16 years ago
|
Summary: [R-t-L] Right-click menu doesn't appear in the left of the mouse cursor → [RTL] Right-click menu doesn't appear in the left of the mouse cursor
Updated•6 years ago
|
Assignee: ehsan → nobody
Status: ASSIGNED → NEW
This is happening on Windows. On Ubuntu it seems to work fine, not sure about macOS.
Flags: needinfo?(emilio)
Assignee | ||
Comment 8•3 years ago
|
||
Updated•3 years ago
|
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Assignee | ||
Updated•3 years ago
|
Flags: needinfo?(emilio)
Assignee | ||
Comment 9•3 years ago
|
||
Comment 10•3 years ago
|
||
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/774691da9d1a
Right align RTL context menus on non-Wayland platforms. r=NeilDeakin
Comment 11•3 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
status-firefox99:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 99 Branch
Comment 12•3 years ago
|
||
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/66a6119fccda
Add a test. r=NeilDeakin
Comment 13•3 years ago
|
||
bugherder |
Updated•3 years ago
|
Component: XUL Widgets → Menus
Product: Toolkit → Firefox
You need to log in
before you can comment on or make changes to this bug.
Description
•