Bug 312891 - Right align RTL context menus on non-Wayland platforms. r=NeilDeakin

Differential Revision: https://phabricator.services.mozilla.com/D139484